--- a/dev/pom.xml
+++ b/dev/pom.xml
@@ -59,6 +59,16 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.tomcat.maven</groupId>
+        <artifactId>tomcat7-maven-plugin</artifactId>
+        <version>2.2</version>
+        <configuration>
+        	<server>maven-tomcat-war-deployment-server</server>
+        	<url>http://localhost:8080/manager/text</url>
+        	<path>/xxx</path>
+        </configuration>
+      </plugin>      
     </plugins>  
     <finalName>dev</finalName>
   </build>
