--- a/dev/pom.xml
+++ b/dev/pom.xml
@@ -42,23 +42,40 @@
   <build>
     <plugins>
     <plugin>
-    	<artifactId>maven.compiler.plugin</artifactId>
-    	<version>3.8.1</version>
+    	<groupId>org.apache.maven.plugins</groupId>
+    	<artifactId>maven-clean-plugin</artifactId>
+    	<version>3.2.0</version>
+    </plugin>
+    <plugin>
+    	<groupId>org.apache.maven.plugins</groupId>
+    	<artifactId>maven-resources-plugin</artifactId>
+    	<version>3.0.2</version>
+    </plugin>
+    <plugin>
+    	<groupId>org.apache.maven.plugins</groupId>
+    	<artifactId>maven-compiler-plugin</artifactId>
+    	<version>3.10.1</version>
+    </plugin>
+    <plugin>
+    	<groupId>org.apache.maven.plugins</groupId>
+    	<artifactId>maven-surefire-plugin</artifactId>
+    	<version>3.0.0-M9</version>
     </plugin>
     <plugin>
     	<groupId>org.apache.maven.plugins</groupId>
     	<artifactId>maven-war-plugin</artifactId>
-    	<version>3.3.1</version>
+    	<version>3.3.2</version>
     </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
+    <plugin>
+    	<groupId>org.apache.maven.plugins</groupId>
+    	<artifactId>maven-install-plugin</artifactId>
+    	<version>3.1.0</version>
+    </plugin>
+    <plugin>
+    	<groupId>org.apache.maven.plugins</groupId>
+    	<artifactId>maven-deploy-plugin</artifactId>
+    	<version>3.1.0</version>
+    </plugin>
       <plugin>
         <groupId>org.apache.tomcat.maven</groupId>
         <artifactId>tomcat7-maven-plugin</artifactId>
@@ -66,7 +83,7 @@
         <configuration>
         	<server>maven-tomcat-war-deployment-server</server>
         	<url>http://localhost:8080/manager/text</url>
-        	<path>/xxx</path>
+        	<path>/zzz</path>
         </configuration>
       </plugin>      
     </plugins>  
