--- a/dev/pom.xml
+++ b/dev/pom.xml
@@ -83,10 +83,10 @@
         <configuration>
         	<server>maven-tomcat-war-deployment-server</server>
         	<url>http://localhost:8080/manager/text</url>
-        	<path>/zzz</path>
+        	<path>/dev</path>
         </configuration>
       </plugin>      
     </plugins>  
-    <finalName>dev</finalName>
+    <finalName>dev1</finalName>
   </build>
 </project>
